# PolFish

./: .gitignore  pyproject.toml  start.sh
MiroFish/: .env.example  .upstream
docs/: API_REFERENCE.md  ARCHITECTURE.md  COMPETITIVE_RESEARCH.md  CONFIGURATION.md  COST_OPTIMIZATION.md  MONTE_CARLO_RESEARCH.md  PREDICTION_PIPELINE_RESEARCH.md  README.md  STRATEGIC_RESEARCH.md  TROUBLESHOOTING.md
polymarket_predictor/: __main__.py  cli.py  config.py  cost_calculator.py  cost_tracker.py  requirements.txt
polymarket_predictor/agents/: __init__.py  templates.py
polymarket_predictor/analyzer/: __init__.py  method_tracker.py  simulation_analyzer.py
polymarket_predictor/autopilot/: __init__.py  engine.py
polymarket_predictor/backtest/: __init__.py  engine.py
polymarket_predictor/calibrator/: backtest.py  calibrate.py  history.py
polymarket_predictor/dashboard/: api.py
polymarket_predictor/data/: calibration.json  experiment_state.json  overnight_state.json  resolved_markets_cache.json
polymarket_predictor/experiment/: __init__.py  runner.py
polymarket_predictor/knowledge/: __init__.py  context_store.py
polymarket_predictor/ledger/: __init__.py  decision_ledger.py
polymarket_predictor/loop/: runner.py
polymarket_predictor/monte_carlo/: __init__.py  simulator.py
polymarket_predictor/optimizer/: __init__.py  strategy.py
polymarket_predictor/orchestrator/: ensemble.py  pipeline.py  prompts.py
polymarket_predictor/overnight/: __init__.py  runner.py  state.py
polymarket_predictor/paper_trader/: __init__.py  portfolio.py
scripts/: run_e2e_test.sh
(+63 files in other folders)
