[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-predictor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[tool.pytest.ini_options]
markers = [
    "e2e: End-to-end integration tests (require API keys, cost money)",
]

[tool.setuptools.packages.find]
include = ["polymarket_predictor*"]
